--- a/css/contact.css
+++ b/css/contact.css
@@ -22,16 +22,12 @@ body{
  /* ################################################################################# */
 
 
- .header{
-    
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/back.jpg');
-    background-size: cover;
-    height: 15vh;
-    background-position: center;
-    background-repeat: no-repeat;    
-    position: relative;
-}
  
+ .navbar{
+    
+    height: 15vh;    
+    background: #50519bc7;
+ }
 
 .navbar .nav-items{
     
@@ -119,18 +115,21 @@ input{
 textarea{
     resize: none;
     font-size: 1.8rem;
+    width: 50%;
+    height: auto;
     
 
 }
 
 .pannel{
-    width: 50rem;
+    width: 50%;
+    height: auto;
     font-size: 1.8rem;
     margin-bottom: 1em;
     padding: 0.5em;
 }
 .pannel-sub{
-    width: 40rem;
+    width: 40%;
     background: rgb(70, 190, 124);
     font-size: 1.8rem;
     border: none;
@@ -166,16 +165,15 @@ textarea{
  /* ################################################################################ */
 
  
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    margin: 0.8rem 2.5rem;
-    padding: 0.5em;
-     
-     
+ footer{
+   margin: 0.8rem 0;
+   padding : 0.5em; 
+   text-align: center;
+   background: #50519bc7;
+
 }
+
 footer p{
-     font-size: 1.3rem;
-    font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 500;
 }
