--- a/css/index.css
+++ b/css/index.css
@@ -239,12 +239,17 @@ body{
 
 
 footer{
-    margin: 0.8rem 2.5rem;
-    padding: 0.5em;
+    bottom: 0;
+    margin: 0.8rem 0;
+    padding : 0.5em; 
+    text-align: center;
+    background: #50519bc7;
+
 }
+
 footer p{
-     font-size: 1.3rem;
-    font-weight: 500;
+    font-size: 1.3rem;
+   font-weight: 500;
 }
 
 
@@ -252,4 +257,3 @@ footer p{
 
 
 /* ####################### Login page ######################################## */
-
