--- a/css/login.css
+++ b/css/login.css
@@ -20,19 +20,12 @@ body{
 
 
  /* ################################################################################# */
-
-
- .header{
-    
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/back.jpg');
-    background-size: cover;
-    height: 15vh;
-     background-position: center;
-    background-repeat: no-repeat;    
-    position: relative;
-}
  
-
+.navbar{
+    
+    height: 15vh;    
+    background: #50519bc7;
+}
 .navbar .nav-items{
     
     float: right;
@@ -111,7 +104,7 @@ body{
     position: absolute;
     transform: translate(-50%,-50%);
     text-align: center;
-    padding: 15rem 10rem;
+    padding: 8em 5em;
     box-shadow: 0px 0px 20px 0px rgb(0,0,0,0.4);
     background: blanchedalmond;
 
@@ -119,9 +112,9 @@ body{
   
 
  .wrapper input[type=email], .wrapper input[type=password] , .wrapper input[type=submit], .reg input[type=email], .reg input[type=password] , .reg input[type=text], .reg input[type=email]{
-     padding: 0.4rem;
-     width: 24rem;
-     margin-bottom: 2rem;
+    padding: 0.4rem;
+    width: 25rem;
+    margin-bottom: 2rem;
 
  }
  .wrapper input[type=submit], .reg input[type=submit]{
@@ -186,7 +179,7 @@ body{
     position: absolute;
     transform: translate(-50%,-50%);
     text-align: center;
-    padding: 11rem 4rem;
+    padding: 8em 5em;
     box-shadow: 0px 0px 20px 0px rgb(0,0,0,0.4);
     background: blanchedalmond;
 }
@@ -195,15 +188,3 @@ body{
  
 
 /* ######################################################################### */
-footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    margin: 0.8rem 2.5rem;
-    padding : 0.5em; 
-}
-
-footer p{
-    font-size: 1.3rem;
-   font-weight: 500;
-}
