--- a/css/style.css
+++ b/css/style.css
@@ -475,22 +475,18 @@ h1, h2, h3{
 
    
  }
+ .botom .check{
+    text-align: left;
+ }
  .botom input[type=checkbox]{
-     float: left;
-  }
- .botom a{
-     float: right;
-     text-decoration: none;
-     color: rgb(58, 110, 179);
-     
-
-
+     margin-right: 0.5rem;
  }
- .botom::after{
-     content: '';
-     display: block;
-     clear: both;
- }
+.botom .check a{
+    float: right;
+    text-decoration: none;
+    color: rgb(58, 110, 179);
+}
+  
 
 
 .sign{
@@ -616,18 +612,13 @@ h1, h2, h3{
         height: auto;
         background: #fff;
         border: 2px solid #e63946;
-      } 
-      .botom{
-        text-align: center;
-
       }
-
-    .botom a, .botom input[type=checkbox]{
-        float: none;
-        width: 100%;
-        height: auto;
-        display: block;
-    }   
+      .sign{
+        margin-top: 3rem;
+        font-size: 1.3rem;
+    }
+      
+          
 }
 
 @media(min-width: 501px) and (max-width: 768px){
