--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h1, h2, h3{
 .navbar .nav-items a{
     text-decoration: none;
     color: white;
-    padding:  0.2rem 0.4rem;
+    padding:  0.7rem 1rem;
 }
 
 .navbar .nav-items a:hover{
@@ -539,8 +539,7 @@ h1, h2, h3{
 
 @media (max-width: 500px){
     html{
-        /* font-size: 8px; */
-        font-size: 50%;
+         font-size: 45%;
     }
 
     .navbar .nav-items, .navbar .logo{
@@ -548,6 +547,15 @@ h1, h2, h3{
         display: block;
         width: 100%;
         text-align: center;
+    }
+    .navbar .nav-items a{
+        text-decoration: none;
+        color: white;
+        padding:  0.7rem;
+    }
+    .nav-items .active a{
+        background-color: white;
+        color: black;
     }
     .header-content .main-heading{
         display: none;
@@ -622,7 +630,6 @@ h1, h2, h3{
         height: auto;
          background: #fff;
         border: 2px solid #e63946;
-<<<<<<< HEAD
       }
       .sign{
         margin-top: 3rem;
@@ -631,21 +638,6 @@ h1, h2, h3{
       
           
 }
-=======
-      } 
-   .botom{
-        text-align: center;
-      }
- 
-    .botom a, .botom input[type=checkbox]{
-        float: none;
-        width: 100%;
-        height: auto;
-        display: block;
-     }       
-    
- }
->>>>>>> 5396cb535bd921778b4e4752d3f26138136d931e
 
 @media(min-width: 501px) and (max-width: 768px){
     html{
